--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ albumentations = "^1.4.21"
 moviepy = "^1.0.3"
 python-dotenv = "^1.0.1"
 inference-cli = "^0.27.0"
+boto3 = "^1.35.73"
+fastapi = "^0.115.5"
 
 [build-system]
 requires = ["poetry-core"]
