--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,21 +4,22 @@ version = "0.1.0"
 description = ""
 authors = ["Michael Kingston <71872141+mkingopng@users.noreply.github.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "<3.12,>=3.9"
+python = ">=3.9,<3.12"
 torch = "^2.5.1"
 torchvision = "^0.20.1"
 torchaudio = "^2.5.1"
 ultralytics = "^8.3.27"
 jupyter = "^1.1.1"
-ruff = "^0.7.2"
+ruff = "^0.7.4"
 pytest = "^8.3.3"
 scikit-learn = "^1.5.2"
 black = "^24.10.0"
 labelbox = "^6.0.1"
 pandas = "^2.2.3"
-wandb = "^0.18.5"
+wandb = "^0.18.7"
 opencv-python = "^4.10.0.84"
 albumentations = "^1.4.21"
 moviepy = "^1.0.3"
@@ -26,6 +27,8 @@ python-dotenv = "^1.0.1"
 inference-cli = "^0.27.0"
 boto3 = "^1.35.73"
 fastapi = "^0.115.5"
+aws-cdk-lib = "^2.173.2"
+constructs = "^10.4.2"
 
 [build-system]
 requires = ["poetry-core"]
