--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ fastapi = "^0.115.5"
 aws-cdk-lib = "^2.173.2"
 constructs = "^10.4.2"
 lap = "^0.5.12"
+flask = "^3.1.0"
 
 [build-system]
 requires = ["poetry-core"]
