--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ aws-cdk-lib = "^2.173.2"
 constructs = "^10.4.2"
 lap = "^0.5.12"
 flask = "^3.1.0"
+gunicorn = "^23.0.0"
 
 [build-system]
 requires = ["poetry-core"]
