Gone back to deploying for real, and destoying at the end of each session

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,10 @@
 version: '3.8'
+
 services:
-  localstack:
-    image: localstack/localstack
+  app:
+    build: .
     ports:
-      - "4566:4566"       # main gateway
-      - "4571:4571"
+      - "5000:5000"
     environment:
-      - SERVICES=s3,dynamodb,lambda,stepfunctions
-      - DEFAULT_REGION=us-east-1
-      - DATA_DIR=/tmp/localstack_data
-      - LOCALSTACK_SKIP_CLEANUP=1
-    volumes:
-      - "./localstack_data:/tmp/localstack_data"
-      - "/var/run/docker.sock:/var/run/docker.sock"
+      - AWS_REGION=us-east-1
+      - DYNAMODB_TABLE=RefVisionData
