--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "refvision"
 version = "0.1.0"
-description = ""
+description = "RefVision AI for powerlifting"
 authors = ["Michael Kingston <71872141+mkingopng@users.noreply.github.com>"]
 readme = "README.md"
 package-mode = false
@@ -32,7 +32,6 @@ constructs = "^10.4.2"
 lap = "^0.5.12"
 flask = "^3.1.0"
 gunicorn = "^23.0.0"
-localstack-client = "^2.7"
 
 [build-system]
 requires = ["poetry-core"]
