--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ flask = "^3.1.0"
 gunicorn = "^23.0.0"
 pytest-cov = "^6.0.0"
 mypy = "^1.15.0"
+rsa = "^4.9"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
