--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,6 @@ exclude = "cdk/cdk\\.out"
 [tool.mypy.yaml]
 ignore_missing_imports = true
 follow_imports = "skip"
+
+[tool.ruff.per-file-ignores]
+"ref_vision_infrastructure_stack.py" = ["F401", "F841"]
