--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,7 @@ cython_debug/
 
 # Ignore AWS CDK output
 cdk.out/
+/notes.md
+/tmp/
+/presentation/theo_maddox_squat_2.mp4
+/presentation/Keeta_squat_1.mp4
