--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,6 @@ cdk.out/
 /tmp/
 /presentation/theo_maddox_squat_2.mp4
 /presentation/Keeta_squat_1.mp4
+/repomix-output.txt
+/project_structure.txt
+/lambda_package.zip
