--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - AWS_REGION=us-east-1
+      - AWS_REGION=ap-southeast-2
       - DYNAMODB_TABLE=RefVisionData
