--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,29 +1,29 @@
 # .pre-commit-config.yaml
 repos:
-  - repo: local
-    hooks:
-      - id: pytest
-        name: Run Pytest
-        entry: pytest --maxfail=1 --disable-warnings -q
-        language: system
-        pass_filenames: false
+#  - repo: local
+#    hooks:
+#      - id: pytest
+#        name: Run Pytest
+#        entry: pytest --maxfail=1 --disable-warnings -q
+#        language: system
+#        pass_filenames: false
 
   - repo: https://github.com/psf/black
     rev: 24.10.0
     hooks:
       - id: black
         language_version: python3.11
-
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.7.4  # note the "v" prefix
-    hooks:
-      - id: ruff
-        additional_dependencies: []
-        language_version: python3.11
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.15.0  # note the "v" prefix
-    hooks:
-      - id: mypy
-        args: [--ignore-missing-imports]
-        language_version: python3.11
+#
+#  - repo: https://github.com/charliermarsh/ruff-pre-commit
+#    rev: v0.7.4  # note the "v" prefix
+#    hooks:
+#      - id: ruff
+#        additional_dependencies: []
+#        language_version: python3.11
+#
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: v1.15.0  # note the "v" prefix
+#    hooks:
+#      - id: mypy
+#        args: [--ignore-missing-imports]
+#        language_version: python3.11
