--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ gunicorn = "^23.0.0"
 pytest-cov = "^6.0.0"
 mypy = "^1.15.0"
 rsa = "^4.9"
+git-filter-repo = "^2.47.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
