--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,9 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-torch = "^2.5.1"
-torchvision = "^0.20.1"
+torch = "==2.1"
+torchvision = "^0.16"
 ultralytics = "^8.3.27"
-ruff = "^0.7.4"
-pytest = "^8.3.3"
-black = "^24.10.0"
 moviepy = "^1.0.3"
 python-dotenv = "^1.0.1"
 inference-cli = "^0.27.0"
@@ -23,16 +20,19 @@ constructs = "^10.4.2"
 lap = "^0.5.12"
 flask = "^3.1.0"
 gunicorn = "^23.0.0"
-pytest-cov = "^6.0.0"
-mypy = "^1.15.0"
 rsa = "^4.9"
-git-filter-repo = "^2.47.0"
 
 [tool.poetry.group.dev.dependencies]
+ruff = "^0.7.4"
+pytest = "^8.3.3"
+black = "^24.10.0"
 pre-commit = "^4.1.0"
 pytest-mock = "^3.14.0"
 types-pyyaml = "^6.0.12.20241230"
 boto3-stubs = {extras = ["essential"], version = "^1.36.19"}
+git-filter-repo = "^2.47.0"
+pytest-cov = "^6.0.0"
+mypy = "^1.15.0"
 
 [build-system]
 requires = ["poetry-core"]
